@@ -15,9 +15,6 @@ Package: <%= binary_package.name %>
 Architecture: <%= binary_package.architecture %>
 XB-Ruby-Versions: ${ruby:Versions}
 Depends: <%= binary_package.dependencies.join(', ') %>
-<% if binary_package.gem_dependencies.length > 0 %>
-# <%= binary_package.gem_dependencies.join(', ') %>
-<% end %>
 Description: <%= short_description ? short_description : 'FIXME' %>
 <% if long_description %>
 <%= long_description.lines.map { |line| ' ' + (line.strip.empty? ? '.' : line.strip) }.join("\n") + "\n" %>
